# tddbot

./: .dockerignore  .gitignore  Dockerfile  bot_in.py  config.py  docker-compose.yml  logger_setup.py  main.py  pyproject.toml  run.py  setup_webhook.py  worker_ini.py
app/: main.py  redis_client.py
app/templates/: guide.html
core/mails/: client.py
core/marzban/: Client.py
core/yoomoney/: payment.py
db/: database.py  models.py
handlers/: deps.py  instructions.py  others.py  payment.py  start.py  sub_n_links.py  trial.py
keyboards/: builder.py  deps.py  markup.py
mailserver/docker-data/dms/mail-state/lib-dovecot/: instances
mailserver/docker-data/dms/mail-state/lib-postfix/: prng_exch
midllewares/: db.py
misc/: bot_setup.py  decorators.py  utils.py
nginx/: nginx.conf
repositories/: base.py
schemas/: schem.py
tests/: conftest.py  fixtures.py  test_bot_webhook.py  test_handlers.py  test_high_priority_scenarios.py  test_integration_utils.py  test_marzban.py  test_webhooks.py  test_workers.py
tests/locust/: config.py  locustfile.py  run_load_test.sh
