[project]
name = "tdd-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiosqlite>=0.21.0",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "litestar>=2.18.0",
    "locust>=2.42.6",
    "ptbtest>=1.3",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "yookassa>=3.8.0",
]
